fix spacing issue

--- a/src/@components/AnimatedBackground/index.module.css
+++ b/src/@components/AnimatedBackground/index.module.css
@@ -1,5 +1,5 @@
 .AnimatedBackground {
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
 }
